--- a/public/index.html
+++ b/public/index.html
@@ -52,8 +52,7 @@
         <script type="module" src="/js/app.a04c078d.js"></script>
         <script>
             !function() {
-                var e = document
-                  , t = e.createElement("script");
+                var e = document, t = e.createElement("script");
                 if (!("noModule"in t) && "onbeforeload"in t) {
                     var n = !1;
                     e.addEventListener("beforeload", function(e) {
