--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       }
     </style>
     <link rel="icon" type="image/png" href="/logo.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, height=device-height, viewport-fit=cover">
   </head>
 
   <body>
