--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Plan B Hausmeisterservice - Matthias Fonte | Oberhatkofen</title>
+    <title>Plan B Hausmeisterservice - Matthias Fonte | Oberhatzkofen</title>
     <style>
       html, body{
         width: 100%;
